--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -28,7 +28,7 @@ services:
             - ./requirements.txt:/usr/local/airflow/requirements.txt
             - ./dags/scraper:/usr/local/airflow/dags/scraper
             - ./__init__.py:/usr/local/airflow/__init__.py
-            # - ./plugins:/usr/local/airflow/plugins
+              # - ~/.aws/credentials:~/.aws/credentials
         ports:
             - "8080:8080"
         command: webserver
