--- a/requirements.txt
+++ b/requirements.txt
@@ -90,6 +90,7 @@ PyDispatcher==2.0.5
 Pygments==2.6.1
 PyHamcrest==1.9.0
 PyJWT==1.7.1
+pymongo==3.11.0
 pyOpenSSL==19.0.0
 pyparsing==2.4.5
 pyrsistent==0.16.0
@@ -128,6 +129,7 @@ w3lib==1.21.0
 wcwidth==0.1.7
 Werkzeug==0.16.1
 WTForms==2.3.2
+xmltodict==0.12.0
 zipp==0.6.0
 zope.deprecation==4.4.0
 zope.interface==4.7.1
