--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -27,6 +27,7 @@ services:
             - ./dags:/usr/local/airflow/dags
             - ./requirements.txt:/usr/local/airflow/requirements.txt
             - ./config.json:/usr/local/airflow/config.json
+            - ./cred.json:/usr/local/airflow/cred.json
         ports:
             - "8080:8080"
         command: webserver
